<resources>
    <string name="app_name">KA</string>
    <string name="title_home">Tin tức</string>
    <string name="title_dashboard">Danh mục</string>
    <string name="title_notifications">Người dùng</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="app_description">KA cung cấp những cách đơn giản và nâng cao để chặn quyền truy cập vào internet - không yêu cầu root. Ứng dụng và địa chỉ có thể được cá nhân cho phép hoặc từ chối truy cập Wi-Fi và/hoặc kết nối di động của bạn.</string>
    <string name="app_android">KA yêu cầu Android 5.1 hoặc cao hơn</string>
    <string name="app_xposed">Xposed gây ra quá nhiều lỗi, mà có ảnh hưởng đến KA bị gỡ bỏ khỏi cửa hàng Google Play; Do đó, KA sẽ không được hỗ trợ nếu Xposed được cài đặt.</string>
    <string name="app_privacy">Chính sách riêng tư</string>
    <string name="app_first">Tôi đã rất cẩn thận để phát triển và thử nghiệm KA, tuy nhiên không thể đảm bảo KA sẽ làm việc chính xác trên mọi thiết bị.</string>
    <string name="app_agree">Tôi đồng ý</string>
    <string name="app_disagree">Tôi không đồng ý</string>
    <string name="app_support">KA cần sự giúp đỡ của bạn. Nhấn để mua các tính năng Pro để giữ cho dự án hoạt động.</string>
    <string name="channel_foreground">Các dịch vụ đang chạy</string>
    <string name="channel_notify">Thông báo chung</string>
    <string name="channel_access">Truy cập thông báo</string>
    <string name="menu_protocol_udp" translatable="false">UDP</string>
    <string name="menu_protocol_tcp" translatable="false">TCP</string>
    <string name="menu_search">Tìm kiếm ứng dụng</string>
    <string name="menu_filter">Lọc ứng dụng</string>
    <string name="menu_app_user">Hiển thị ứng dụng của người dùng</string>
    <string name="menu_app_system">Hiển thị các ứng dụng hệ thống</string>
    <string name="menu_app_nointernet">Hiển thị các ứng dụng không có internet</string>
    <string name="menu_app_disabled">Hiển thị các ứng dụng bị tắt</string>
    <string name="menu_sort">Sắp xếp ứng dụng</string>
    <string name="menu_sort_name">Sắp xếp theo tên</string>
    <string name="menu_sort_uid">Sắp xếp theo uid</string>
    <string name="menu_sort_data">Sắp xếp theo mức dữ liệu sử dụng</string>
    <string name="menu_log">Xem lịch sử</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_invite">Mời</string>
    <string name="menu_legend">Chú giải</string>
    <string name="menu_support">Hỗ trợ</string>
    <string name="menu_about">Giới thiệu</string>
    <string name="menu_apps">Ứng dụng khác</string>
    <string name="menu_protocol_other">Khác</string>
    <string name="menu_traffic_allowed">Cho phép</string>
    <string name="menu_traffic_blocked">Đã chặn</string>
    <string name="menu_live">Cập nhật trực tiếp</string>
    <string name="menu_refresh">Làm mới</string>
    <string name="menu_resolve">Tên hiển thị:</string>
    <string name="menu_organization">Hiển thị các tổ chức</string>
    <string name="menu_pcap_enabled">Kích hoạt PCAP</string>
    <string name="menu_pcap_export">Xuất PCAP</string>
    <string name="menu_clear">Xóa</string>
    <string name="menu_export">Xuất ra</string>
    <string name="menu_reset">Thiết lập lại</string>
    <string name="menu_add">Thêm</string>
    <string name="menu_delete">Xoá</string>
    <string name="menu_cleanup">Dọn dẹp</string>
    <string name="title_protocol">Giao thức</string>
    <string name="title_dport">Cổng nguồn</string>
    <string name="title_raddr">Địa chỉ nơi đến</string>
    <string name="title_rport">Cổng nơi đến</string>
    <string name="title_ruid">Ứng dụng đích đến</string>
    <string name="title_external">Đối với một máy chủ bên ngoài chọn \'nobody\'</string>
    <string name="setting_defaults">Mặc định (white/blacklist)</string>
    <string name="setting_whitelist_wifi">Chặn Wi-Fi</string>
    <string name="setting_whitelist_other">Chặn mạng di động</string>
    <string name="setting_screen_wifi">Cho phép Wi-Fi khi màn hình bật</string>
    <string name="setting_screen_other">Cho phép mạng di động khi màn hình bật</string>
    <string name="setting_whitelist_roaming">Chặn chuyển vùng</string>
    <string name="setting_options">Tuỳ chọn</string>
    <string name="setting_theme">Chủ đề: %1$s</string>
    <string name="setting_dark">Sử dụng chủ đề tối</string>
    <string name="setting_install">Thông báo khi có ứng dụng mới</string>
    <string name="setting_screen_on">Áp dụng quy tắc (khi bật màn hình)</string>
    <string name="setting_auto">Tự động kích hoạt sau %1$s phút</string>
    <string name="setting_delay">Trì hoãn màn hình tắt %1$s phút</string>
    <string name="setting_update">Kiểm tra cập Nhật</string>
    <string name="setting_network_options">Tùy chọn mạng</string>
    <string name="setting_subnet">Định tuyến mạng con</string>
    <string name="setting_tethering">Cho phép giới hạn</string>
    <string name="setting_lan">Cho phép truy cập mạng LAN</string>
    <string name="setting_ip6">Kích hoạt lưu lượng truy cập IPv6</string>
    <string name="setting_wifi_home">Wi-Fi nhà mạng: %1$s</string>
    <string name="setting_metered">Xử lý các mạng Wi-Fi có trả phí</string>
    <string name="setting_metered_2g">Xem xét mạng 2G miễn phí</string>
    <string name="setting_metered_3g">Xem xét mạng 3G miễn phí</string>
    <string name="setting_metered_4g">Xem xét mạng LTE miễn phí</string>
    <string name="setting_national_roaming">Bỏ qua chuyển vùng quốc gia</string>
    <string name="setting_eu_roaming">Bỏ qua chuyển vùng EU</string>
    <string name="setting_call">Vô hiệu hoá khi gọi</string>
    <string name="setting_lockdown_wifi">Khoá Wi-Fi</string>
    <string name="setting_lockdown_other">Khóa di động</string>
    <string name="setting_reload_onconnectivity">Tải lại mỗi lần đổi kết nối</string>
    <string name="setting_advanced_options">Tùy chọn nâng cao</string>
    <string name="setting_system">Quản lý ứng dụng hệ thống</string>
    <string name="setting_log_app">Thông báo truy cập internet</string>
    <string name="setting_access">Thông báo truy cập internet</string>
    <string name="setting_filter">Lọc lưu lượng truy cập</string>
    <string name="setting_filter_udp">Lọc lưu lượng truy cập</string>
    <string name="setting_handover">Chuyển giao VPN khi tải lại</string>
    <string name="setting_clear_onreload">Đóng kết nối khi tải lại</string>
    <string name="setting_lockdown">Khóa truy cập</string>
    <string name="setting_track_usage">Theo dõi cách sử dụng mạng</string>
    <string name="setting_reset_usage">Đặt lại sử dụng mạng</string>
    <string name="setting_show_resolved">Hiển thị tên miền giải quyết</string>
    <string name="setting_block_domains">Chặn tên miền</string>
    <string name="setting_rcode">Mã phản hồi DNS: %s</string>
    <string name="setting_forwarding">Cổng chuyển tiếp</string>
    <string name="setting_vpn4">VPN IPv4: %s</string>
    <string name="setting_vpn6">VPN IPv6: %s</string>
    <string name="setting_dns">VPN DNS: %s</string>
    <string name="setting_validate">Xác thực tại: %s</string>
    <string name="setting_ttl">Tối thiểu DNS TTL: %s s</string>
    <string name="setting_socks5_enabled">Dùng Socks5 proxy</string>
    <string name="setting_socks5_addr">Địa chỉ (Socks5): %s</string>
    <string name="setting_socks5_port">Cổng (Socks5):%s</string>
    <string name="setting_socks5_username">Username: %s</string>
    <string name="setting_socks5_password">Password: %s</string>
    <string name="setting_pcap_record_size">Kích thước ghi PCAP: %s B</string>
    <string name="setting_pcap_file_size">Kích thước tập tin PCAP lớn nhất: %s MB</string>
    <string name="setting_watchdog">Thời gian giám sát: mỗi %s phút</string>
    <string name="setting_stats_category">Hiển thị thông báo tốc độ</string>
    <string name="setting_stats">Hiển thị thông báo tốc độ</string>
    <string name="setting_stats_top">Hiển thị các ứng dụng hàng đầu</string>
    <string name="setting_stats_frequency">Khoảng thời gian mẫu: %s ms</string>
    <string name="setting_stats_samples">Số mẫu: %s s</string>
    <string name="setting_backup">Sao lưu</string>
    <string name="setting_export">Xuất cài đặt</string>
    <string name="setting_import">Nhập cài đặt</string>
    <string name="setting_hosts">Nhập file hosts</string>
    <string name="setting_hosts_append">Chọn file host</string>
    <string name="setting_hosts_url">URL tải file hosts</string>
    <string name="setting_hosts_download">Tải về file hosts</string>
    <string name="setting_technical">Thông tin kỹ thuật</string>
    <string name="setting_technical_general">Cài đặt chung</string>
    <string name="setting_technical_networks">Mạng</string>
    <string name="setting_technical_subscription">Câu hỏi thường gặp</string>
    <string name="summary_install">Hiển thị thanh thông báo trạng thái trực tiếp cấu hình ứng dụng mới được cài đặt (tính năng pro)</string>
    <string name="summary_auto">Sau khi vô hiệu hóa bằng cách sử dụng các widget, tự động bật KA một lần nữa sau số phút được chọn (nhập 0 để tắt tùy chọn này)</string>
    <string name="summary_delay">Sau khi màn hình tắt, giữ cho các quy tắc khi màn hình bật hoạt động trong số phút được chọn (nhập 0 để tắt tùy chọn này)</string>
    <string name="summary_update">Kiểm tra các phiên bản mới trên GitHub hai lần mỗi ngày</string>
    <string name="summary_tethering">Tùy thuộc vào phiên bản Android, việc giới hạn có thể làm việc hoặc có thể không làm việc. Giới hạn lưu lượng truy cập không thể được lọc.</string>
    <string name="summary_subnet">Kích hoạt định tuyến mạng con; có thể bật Wi-Fi calling, nhưng có thể cũng gây ra lỗi trong Android và làm tăng việc sử dụng pin</string>
    <string name="msg_disabled">KA bị vô hiệu hóa, sử dụng nút gạt bên trên để kích hoạt KA</string>
    <string name="msg_usage">Bạn có thể cho phép (xanh lục) hoặc từ chối (màu đỏ) truy cập internet Wi-Fi hoặc mạng di động bằng cách bấm vào biểu tượng bên cạnh ứng dụng</string>
    <string name="msg_fairemail">Nếu bạn cài đặt KA để bảo vệ riêng tư của bạn, bạn có thể quan tâm đến <a href="https://email.faircode.eu/">FairEmail</a>, một mã nguồn mở, các ứng dụng thân thiện với email bảo mật...</string>
    <string name="msg_whitelist">Truy cập Internet mặc định được cho phép, điều này có thể thay đổi trong cài đặt</string>
    <string name="msg_push">Đưa tin nhắn chủ yếu được xử lý bởi các thành phần Play services của hệ thống, mà mặc định cho phép truy cập internet</string>
    <string name="msg_system">Quản lý ứng dụng hệ thống có thể được kích hoạt trong cài đặt</string>
    <string name="update_acc_parents">Cập nhật tài khoản người bảo hộ</string>
    <string name="name">Tên</string>
    <string name="cmnd">CMND</string>
    <string name="city">Thành phố</string>
    <string name="huyen">Huyện</string>
    <string name="xa">Xã</string>
    <string name="dia_chi">Địa chỉ cụ thể</string>
    <string name="update_info">CẬP NHẬT THÔNG TIN</string>
    <string name="messAddBlacklist">Tạo danh sách chặn để quản lý dễ dàng hơn.</string>
    <string name="tenBlacklist">Tên blacklist</string>
    <string name="loaiBlacklist">Loại blacklist</string>
    <string name="taoBlacklist">Tạo blacklist</string>
</resources>