<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_two"
    tools:context=".JavaCode.ActivityAddBlackList">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_common" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:padding="@dimen/dp14"
        android:text="@string/messAddBlacklist"
        android:textColor="@color/black2"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="30dp"
        android:paddingRight="16dp"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/text">

        <EditText
            android:id="@+id/edit_tenbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/tenBlacklist"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_loaibl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loaiBlacklist"
            android:inputType="text">

        </EditText>

        <Button
            android:id="@+id/btn_taobl"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:layout_marginTop="@dimen/dp14"
            android:background="@drawable/rettangolo_27_2"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/taoBlacklist"
            android:textColor="@color/white"
            android:textSize="@dimen/sp14">

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>