<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.AccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_two">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/tite3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/raleway_black"
                android:text="@string/update_acc_parents"
                android:textColor="#656565"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tite3">

                <EditText
                    android:id="@+id/nhapTen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nhapNgaySinh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:paddingStart="5dp"
                        android:text="m/d/y"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/sp18" />

                    <Button
                        android:id="@+id/chonNgaySinh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bl"
                        android:text="Chọn ngày sinh"
                        android:textColor="@color/white" />

                </LinearLayout>

                <EditText
                    android:id="@+id/cmnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/cmnd"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/nhapThanhPho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/city"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/nhapHuyen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/huyen"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/nhapXa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/xa"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/nhapDiaChi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/dia_chi"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnChonAnh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/bl"
                        android:text="Chọn ảnh đại diện"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/mess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/red" />
                </LinearLayout>


                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_image" />

            </LinearLayout>

            <TextView
                android:id="@+id/btnTaoTaiKhoanTreEm"
                android:layout_width="250dp"
                android:layout_height="52dp"
                android:layout_margin="15dp"
                android:background="@drawable/rettangolo_27_2"
                android:fontFamily="@font/lato"
                android:gravity="center"
                android:text="@string/update_info"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>